@@ -1,6 +1,7 @@
 package com.kurtlar.konseyi.freelancerclone.domain.controller.mapper;
 
 import com.kurtlar.konseyi.freelancerclone.domain.dto.JobDto;
+import com.kurtlar.konseyi.freelancerclone.domain.dto.OfferDto;
 import com.kurtlar.konseyi.freelancerclone.domain.dto.TechnologyDto;
 import com.kurtlar.konseyi.freelancerclone.domain.request.JobRequest;
 import com.kurtlar.konseyi.freelancerclone.domain.response.JobResponse;
@@ -11,9 +12,11 @@ import java.util.stream.Collectors;
 
 public class JobMapper {
 
-    public JobMapper(){}
+    public JobMapper() {
+    }
 
-    public static JobDto toDto(JobRequest request){
+    public static JobDto toDto(JobRequest request) {
+        List<TechnologyDto> technologies = new ArrayList<>();
         return JobDto.builder()
                 .name(request.getName())
                 .description(request.getDescription())
@@ -27,15 +30,13 @@ public class JobMapper {
                         .stream()
                         .map(technology -> TechnologyDto.builder()
                                 .id(technology)
-                                .build()).toList())
+                                .build()).collect(Collectors.toList()))
                 .build();
     }
 
-    public static JobResponse toResponse(JobDto job){
+    public static JobResponse toResponse(JobDto job) {
         return JobResponse.builder()
                 .id(job.getId())
-                .created(job.getCreated())
-                .modified(job.getModified())
                 .name(job.getName())
                 .description(job.getDescription())
                 .salary(job.getSalary())
@@ -45,7 +46,8 @@ public class JobMapper {
                 .ownerId(job.getOwnerId())
                 .status(job.getStatus())
                 .technologies(job.getTechnologies())
-                .offers(job.getOffers())
+                .created(job.getCreated())
+                .modified(job.getModified())
                 .build();
     }
 
