@@ -3,16 +3,21 @@ package com.kurtlar.konseyi.freelancerclone.domain.service.impl;
 import com.kurtlar.konseyi.freelancerclone.domain.dto.JobDto;
 import com.kurtlar.konseyi.freelancerclone.domain.dto.TechnologyDto;
 import com.kurtlar.konseyi.freelancerclone.domain.entity.Job;
-import com.kurtlar.konseyi.freelancerclone.domain.entity.User;
 import com.kurtlar.konseyi.freelancerclone.domain.repository.JobRepository;
 import com.kurtlar.konseyi.freelancerclone.domain.service.JobService;
+import com.kurtlar.konseyi.freelancerclone.domain.service.OfferService;
 import com.kurtlar.konseyi.freelancerclone.domain.service.TechnologyService;
 import com.kurtlar.konseyi.freelancerclone.domain.service.mapper.JobMapper;
 import com.kurtlar.konseyi.freelancerclone.library.exception.ResourceNotFoundException;
+import com.kurtlar.konseyi.freelancerclone.library.utils.CreatePageable;
+import com.kurtlar.konseyi.freelancerclone.library.utils.CreateSort;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
@@ -21,16 +26,17 @@ public class JobServiceImpl implements JobService {
 
     private final JobRepository repository;
     private final TechnologyService technologyService;
+    private final OfferService offerService;
 
     @Override
     public JobDto save(JobDto jobDto) {
         Job job = repository.save(JobMapper.toEntity(new Job(), jobDto));
-        return JobMapper.toDto(job, technologyService);
+        return JobMapper.toDto(job, technologyService ,offerService);
     }
 
     @Override
     public JobDto getById(String jobId) {
-        return repository.findById(jobId).map(job -> JobMapper.toDto(job,technologyService)).orElseThrow(
+        return repository.findById(jobId).map(job -> JobMapper.toDto(job,technologyService ,offerService)).orElseThrow(
                 () -> new ResourceNotFoundException(Job.class.getSimpleName(), "id", jobId)
         );
     }
@@ -39,7 +45,7 @@ public class JobServiceImpl implements JobService {
     public JobDto update(String jobId, JobDto jobDto) {
         Job job = repository.findById(jobId).orElseThrow(
                 () -> new ResourceNotFoundException(Job.class.getSimpleName(), "id", jobId));
-        return JobMapper.toDto(repository.save(setJob(job, jobDto)),technologyService);
+        return JobMapper.toDto(repository.save(setJob(job, jobDto)),technologyService,offerService);
     }
 
     @Override
@@ -51,20 +57,39 @@ public class JobServiceImpl implements JobService {
     }
 
     @Override
-    public List<JobDto> getAllJobsByOwner(String ownerId) {
-        return repository.findAllByOwnerId(ownerId)
-                .stream()
-                .map(job -> JobMapper.toDto(job,technologyService))
-                .collect(Collectors.toList());
+    public Page<JobDto> getAllJobs(String pageNumber, String pageSize, String sortBy, String sortDir) {
+        Sort sort = CreateSort.generateSort(sortBy, sortDir);
+        Pageable pageable = CreatePageable.createPageable(pageNumber, pageSize, sort);
+
+        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService,offerService));
     }
 
     @Override
-    public List<JobDto> getAllJobsByWorker(String workerId) {
-        return repository.findAllByWorkerId(workerId)
-                .stream()
-                .map(job -> JobMapper.toDto(job,technologyService))
-                .collect(Collectors.toList());
+    public Job getEntityById(String jobId) {
+        return repository.findById(jobId).orElseThrow(
+                () -> new ResourceNotFoundException(Job.class.getSimpleName(), "id", jobId)
+        );
     }
+
+    @Override
+    public Page<JobDto> getAllJobsByOwner(String ownerId , String pageNumber, String pageSize , String  sortBy , String sortDir) {
+        Sort sort = CreateSort.generateSort(sortBy, sortDir);
+
+        Pageable pageable = PageRequest.of(Integer.parseInt(pageNumber), Integer.parseInt(pageSize), sort);
+
+        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService,offerService));
+    }
+
+    @Override
+    public Page<JobDto> getAllJobsByWorker(String workerId , String pageNumber, String pageSize , String  sortBy , String sortDir) {
+        Sort sort = CreateSort.generateSort(sortBy, sortDir);
+
+        Pageable pageable = PageRequest.of(Integer.parseInt(pageNumber), Integer.parseInt(pageSize), sort);
+
+        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService,offerService));
+    }
+
+
 
 
     public Job setJob(Job job ,JobDto jobDto){
@@ -74,13 +99,8 @@ public class JobServiceImpl implements JobService {
         job.setDescription(jobDto.getDescription());
         job.setSalary(jobDto.getSalary());
         job.setStatus(jobDto.getStatus());
-        job.setOwnerId(jobDto.getOwnerId());
         job.setWorkerId(jobDto.getWorkerId());
-        job.setOffers(jobDto.getOffers());
-        job.setTechnologies(jobDto.getTechnologies()
-                .stream()
-                .map(TechnologyDto::getId)
-                .toList());
+        job.setTechnologies(jobDto.getTechnologies().stream().map(technologyDto ->technologyDto.getId()).collect(Collectors.toList()));
         return job;
     }
 }
