@@ -2,23 +2,26 @@ package com.kurtlar.konseyi.freelancerclone.domain.service.mapper;
 
 
 import com.kurtlar.konseyi.freelancerclone.domain.dto.JobDto;
+import com.kurtlar.konseyi.freelancerclone.domain.dto.OfferDto;
 import com.kurtlar.konseyi.freelancerclone.domain.dto.TechnologyDto;
 import com.kurtlar.konseyi.freelancerclone.domain.entity.Job;
+import com.kurtlar.konseyi.freelancerclone.domain.entity.Offer;
+import com.kurtlar.konseyi.freelancerclone.domain.service.OfferService;
 import com.kurtlar.konseyi.freelancerclone.domain.service.TechnologyService;
+import lombok.RequiredArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
 
 public class JobMapper {
+    public JobMapper() {
+    }
 
-    public JobMapper(){}
-
-    public static JobDto toDto(Job job, TechnologyService technologyService){
-
+    public static JobDto toDto(Job job, TechnologyService technologyService, OfferService offerService) {
         return JobDto.builder()
                 .id(job.getId())
-                .created(job.getCreated())
-                .modified(job.getModified())
                 .name(job.getName())
                 .description(job.getDescription())
                 .salary(job.getSalary())
@@ -30,12 +33,14 @@ public class JobMapper {
                 .technologies(job.getTechnologies()
                         .stream()
                         .map(technologyService::getById)
-                        .toList())
-                .offers(job.getOffers())
+                        .collect(Collectors.toList()))
+                .created(job.getCreated())
+                .modified(job.getModified())
+                .offers(job.getOffers().stream().map(offer-> offerService.getById(offer.getId())).collect(Collectors.toSet()))
                 .build();
     }
 
-    public static Job toEntity(Job job,JobDto dto){
+    public static Job toEntity(Job job, JobDto dto) {
         job.setName(dto.getName());
         job.setDescription(dto.getDescription());
         job.setSalary(dto.getSalary());
@@ -44,11 +49,10 @@ public class JobMapper {
         job.setEndDate(dto.getEndDate());
         job.setOwnerId(dto.getOwnerId());
         job.setWorkerId(dto.getWorkerId());
-        job.setOffers(dto.getOffers());
         job.setTechnologies(dto.getTechnologies()
                 .stream()
                 .map(TechnologyDto::getId)
-                .toList());
+                .collect(Collectors.toList()));
         return job;
     }
 }
